pushing new treatmenteffect investigation p_inc

--- a/scripts/abccare/treatmenteffects/treatmenteffects-investigation/p_inc/doc/parental-income.tex
+++ b/scripts/abccare/treatmenteffects/treatmenteffects-investigation/p_inc/doc/parental-income.tex
@@ -195,5 +195,49 @@ Table \ref{tab:treat-p_inc} and \ref{tab:control-p_inc} presents the parental in
 \end{scriptsize}
 \end{threeparttable}
 
+\subsection{Investigation on Income Jump from Age 3.5 to Age 12}
+
+Tables \ref{tab:treat-p_inc} and \ref{tab:control-p_inc} show that there is a large jump in income level from age 3.5 to age 12 for most specifications. This jump may be due to (i) returns to education or work experience or (ii) change in part-time or full-time working status of parents. Since most mothers were in their early to mid-20's when their children are 3.5 years old, it is possible that many of them might not have worked full-time at that age.  
+
+Unfortunately, ABC/CARE parent interview questionnaires do not contain variable that indicates part-time/full-time working status or work hours of parents. Hence, we explore mother's occupation category variables and education variables, which are the most informative variables that helps us investigate the income jump. The occupation category variables in ABC/CARE are recorded in Hollingshead scale that ranges from 1 to 9. Table \ref{tab:occ-distribution} shows the list of Hollingshead categories and distribution in each category for working mothers in treatment and control group for child's ages 3.5 and 12. Table \ref{tab:occ-distribution} shows that the proportion of low skilled laborers (Occupation 1-3) are much lower at age 12 than at age 3.5. This trend is more evident for the treatment group. Hence, one explanation of the parental income gap between age 3.5 and age 12 can be the increase in high-skill laborers among working mothers.
+
+\begin{table}[H] \caption{Distribution of Mother's Occupation At Ages 3.5 and 12} \label{tab:occ-distribution}
+	\begin{tabular}{lrrrr}
+	\toprule
+	& \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Control}  \\\cmidrule(lr){2-3} \cmidrule(lr){4-5} 
+ Occupation & Age 3.5 & Age 12 & Age 3.5 & Age 12 \\
+\midrule
+	 1. Farm laborer & 34.2\% & 7\%  &  28.6\% 	& 16.13\% 		\\
+	 2. Unskilled laborer & 7.3\% & 9.3\% 	& 25.7\% & 12.9\%	 \\
+	 3. Semiskilled worker & 17.1\%	& 11.6\% & 11.4\%& 22.6\%	\\
+	 4. Skilled manual laborer 	 & 4.9\%	& 20.9\% & 14.3\% & 16.13\%	\\
+	 5. Clerical/sales & 9.8\%		& 14.0\% & 3.6\%& 16.13\% 	\\
+	 6. Technician 	& 2.4\%	& 25.6\% & 0\%	& 12.9\% 			\\
+	 7. Small business manager & 9.8\%	& 9.3\%	& 5.7\%	& 3.2\% \\
+	 8. Administrator & 14.6\% 	& 0\%	& 5.7\%	& 0\% 			\\
+	 9. Executive 	& 0\%		& 2.3\%		& 0\% & 0\%			\\
+	\bottomrule
+	\end{tabular}
+\end{table}
+
+
+\noindent Table \ref{tab:education-mean} shows the mean years of education for working mothers in treatment and control group at child's ages 3.5 and 12. The mean years of education for both treated and control working mothers has risen from age 3.5 to age 12. This also supports that working mothers at age 12 may have higher skills and higher earnings than working mothers at age 3.5.
+
+
+\begin{table}[H] \caption{Mean Mother's Years of Education at Each Age} \label{tab:education-mean}
+\centering
+	\begin{tabular}{cccc}
+	\toprule
+	\multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Control}  \\\cmidrule(lr){1-2} \cmidrule(lr){3-4} 
+ Age 3.5 & Age 12 & Age 3.5 & Age 12 \\
+\midrule
+11.3 & 14.8 & 11.3 & 13.4 \\ 
+(1.5) & (2.2) & (1.9) & (2.1) \\
+	\bottomrule
+	\end{tabular}
+\\ [1ex]
+\footnotesize\raggedright\underline{Note:} The means and number of observations are conditional on observing the APGAR 1 min. and 5 min. scores and High Risk Index (HRI). Standard errors are reported in parentheses.
+\end{table}
+
 
 \end{document}
