means to tables

--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
 	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ \toprule
-Baseline	&	\multicolumn{2}{c}{\textbf{7.33} (s.e. 1.84)}	&	\multicolumn{2}{c}{\textbf{10.19} (s.e. 2.93)}	&	\multicolumn{2}{c}{\textbf{2.61} s.e. 0.73)}	\\
+Baseline	&	\multicolumn{2}{c}{\textbf{7.33} (s.e. 1.84)}	&	\multicolumn{2}{c}{\textbf{10.19} (s.e. 2.93)}	&	\multicolumn{2}{c}{\textbf{2.61} (s.e. 0.73)}	\\
 \multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
 \multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
 Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
@@ -10,7 +10,7 @@ Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\tex
 Span	&	\textbf{1.52}	&	\textbf{3.19}	&	\textbf{2.23}	&	\textbf{3.84}	&	1.46	&	\textbf{1.81}	\\
 	&	(0.36)	&	(1.04)	&	(0.61)	&	(1.60)	&	(0.36)	&	(0.50)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{5.44}	&	\textbf{9.63}	&	\textbf{3.30}	&	\textbf{11.46}	&	\textbf{5.79}	&	\textbf{2.28}	\\
+factuals	&	\textbf{5.44}	&	\textbf{9.63}	&	3.30	&	\textbf{11.46}	&	\textbf{5.79}	&	\textbf{2.28}	\\
 	&	(1.86)	&	(3.10)	&	(2.95)	&	(3.16)	&	(1.37)	&	(0.76)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
 loss	&	\textbf{11.01}	&	\textbf{5.50}	&	\textbf{15.38}	&	\textbf{7.59}	&	\textbf{3.83}	&	\textbf{2.01}	\\
