--- a/treatmenteffects/treatmenteffects.tex
+++ b/treatmenteffects/treatmenteffects.tex
@@ -2,70 +2,83 @@
 % This file:		Main writeup
 % Original date: 	December 7, 2016
 
-\input{preamble}
+\input{../preamble}
 
-\externaldocument{mediation-gd_appendix}
+\externaldocument{treatmenteffects_appendix}
 
 \begin{document}
 
 
-\title{Gender Differences in the Effects of Early Childhood Education}
+\title{Gender Differences in the Benefits of an Early Childhood Program}
 \author{Jorge Luis Garc\'{i}a \and James J. Heckman \and Anna L. Ziff}
 \date{Original date: December 7, 2016 \\ Current date: \today}
 \maketitle
 
-\section{Proposed Outline}
+\section{Outline}
 
 \begin{enumerate}
 \item	Introduction
 	\begin{enumerate}
 		\item There are gender differences in the current economy. These are especially pronounced when considering disadvantage as well.
-		\item Previous studies have shown the efficiency of investing early in life, especially for children from disadvantaged families
-		\item How are these later-life differences mediated by early life experiences?
+		\item These differences can arise early in life (show plots with gender differences of skills)
+		\item Differences can propagate over the life cycle (show plots with adult gender differences)
+		\item This paper studies the effects of ABC/CARE and offers two methodological innovations (combining functions, counterfactual) to show stark gender differences
+		\item Summary of main findings
+		\item We offer an explanation of the differences (summarize mechanism)
+		\item Paragraph of related literature
+		\item Roadmap
 	\end{enumerate}
 \item Program
 	\begin{enumerate}
 		\item Description of ABC/CARE intervention and study
 		\item Description of data collection points and measures collected
 	\end{enumerate}
-\item Treatment Effects
+\item Parameters of interest
+\item Combining functions
+\item Results
 	\begin{enumerate}
-		\item Tables with treatment effects on inputs and outputs
-		\item More in depth description of parenting measures and select outcomes (crime)
+		\item Plots of combining functions
+		\item Treatment effects mostly presented in the appendix
 	\end{enumerate}
 \item Mediation
 	\begin{enumerate}
-		\item Early skills on later skills
-		\item Later skills on adult mediators (education)
-		\item Adult mediators on outcomes of interest (income)
+		\item Description of mechanism
 	\end{enumerate}
 \item Conclusion
 \end{enumerate}
 
-%\input{sections/abstract}
+\input{sections/0_abstract}
 \tableofcontents
 
 \doublespacing
 
 \section{Introduction}
 \label{sec:introduction}
-\input{sections/introduction}	
+\input{sections/1_introduction}	
 
-\section{Data}
+\section{Background and Data}
 \label{sec:data}
-\input{sections/data}	
+\input{sections/2_data}
+
+\section{Parameters of Interest}
+\label{sec:parameters}
+\input{sections/3_parameters}
+
+\section{Combining Functions}
+\label{sec:combining-functions}
+\input{sections/4_combining-functions}
+
+\section{Treatment Effects}
+\label{sec:treatment-effects}
+\input{sections/5_treatment-effects}
 
 \section{Gender Differences}
-\label{sec:gdiff}
-\input{sections/treatment-effects}		
+\label{sec:gender-differences}
+\input{sections/6_gender-differences}
 
-\section{Mediation Analysis}
-\label{sec:results}
-\input{sections/tmp-results}
-
-%\section{Summary}
-%\label{sec:conclusion}
-%\input{sections/conclusion}	
+\section{Conclusion}
+\label{sec:conclusion}
+\input{sections/7_conclusion}
 
 \clearpage
 \singlespacing
