now it compiles; need to fix references

--- a/treatmenteffects/sections/5_treatment-effects.tex
+++ b/treatmenteffects/sections/5_treatment-effects.tex
@@ -9,7 +9,7 @@ The results for females show that ABC/CARE has substantial effects on education 
 \begin{threeparttable}
 \caption{Treatment Effects on Selected Outcomes, Males}\label{table:tescombinedmales}
 \begin{scriptsize}
-\input{output/select_rslt_combined_males.tex}
+\input{../output/select_rslt_combined_males.tex}
 \end{scriptsize}
 \begin{tablenotes}
 \scriptsize
@@ -24,7 +24,7 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \begin{threeparttable}
 \caption{Treatment Effects on Selected Outcomes, Females$^*$}\label{table:tescombinedfemales}
 \begin{scriptsize}
-\input{output/select_rslt_combined_females.tex}
+\input{../output/select_rslt_combined_females.tex}
 \end{scriptsize}
 \begin{tablenotes}
 \scriptsize
@@ -56,22 +56,22 @@ Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{Treatment vs. Next Best} \label{fig:ppositivenb}
-		\includegraphics[width=\textwidth]{output/itt_noctrl_all.eps}
+		\includegraphics[width=\textwidth]{../output/itt_noctrl_all.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
 	\centering
 	\caption{Treatment vs. Next Best, Significant at 10\% Level} \label{fig:ppositive10}
-		\includegraphics[width=\textwidth]{output/itt_noctrl_all_sig10.eps}
+		\includegraphics[width=\textwidth]{../output/itt_noctrl_all_sig10.eps}
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
 		\caption{ Treatment vs. Stay at Home} \label{fig:ppositivehome}
-		\includegraphics[width=\textwidth]{output/epan_ipw_p0_all.eps}
+		\includegraphics[width=\textwidth]{../output/epan_ipw_p0_all.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
 	\centering
 	\caption{Treatment vs. Alternative Preschool} \label{fig:ppositivealternative}
-		\includegraphics[width=\textwidth]{output/epan_ipw_p1_all.eps}
+		\includegraphics[width=\textwidth]{../output/epan_ipw_p1_all.eps}
 \end{subfigure}
 \scriptsize \justify
 Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
