--- a/treatmenteffects/sections/2_data.tex
+++ b/treatmenteffects/sections/2_data.tex
@@ -36,12 +36,12 @@ In ABC/CARE, many control group members (but no children from families offered t
 \begin{subfigure}[h]{0.49\textwidth}
 	\centering
 	\caption{Cumulative Enrollment} \label{fig:treatsubcare}
-	\includegraphics[width=\textwidth]{output/abccare_controlcontamination.eps}
+	\includegraphics[width=\textwidth]{../output/abccare_controlcontamination.eps}
 \end{subfigure}
 \begin{subfigure}[h]{0.49\textwidth}
 	\centering
 	\caption{Enrollment Dynamics} \label{fig:proportion-alt-pre}
-	\includegraphics[width=\textwidth]{output/abccare_Vprobs.eps}
+	\includegraphics[width=\textwidth]{../output/abccare_Vprobs.eps}
 \end{subfigure}%
 \footnotesize \justify
 Note: Panel (a) displays the cumulative distribution function of enrollment in alternatives. Panel (b) displays the fraction of ABC/CARE control-group children enrolled in alternatives, conditional on being enrolled in the previous age (at least one month).\\
