--- a/treatmenteffects/sections/1_introduction.tex
+++ b/treatmenteffects/sections/1_introduction.tex
@@ -1,4 +1,40 @@
-When considering gender differences in the modern economy, the wage gap between men and women is an oft-cited number. In the fourth quarter of 2016, white women earned 81.1\% as much as white men and black women earned 92.1\% as much as black men. This reveals a gap not only by gender, but also by race: Black (Hispanic) women only earn 67.8\% (62.0\%) as white men and black (Hispanic) men earn 73.6\% (71.4\%) as much as white men.\footnote{\citet{USDPTL_2017_Wage_News-Release}.} 
+There are many life-relevant ways to measure the differences between adult males and females. The wage gap is an oft-cited number: In the fourth quarter of 2016, white women earned 81.1\% as much as white men and black women earned 92.1\% as much as black men. This reveals a gap not only by gender, but also by race with Black (Hispanic) women only earning 67.8\% (62.0\%) as much as white men and black (Hispanic) men earning 73.6\% (71.4\%) as much as white men.\footnote{\citet{USDPTL_2017_Wage_News-Release}.}
+
+ Although this favors males, there are related measures of gender differences that favor females. In both criminal activity and educational attainment, females fare better than males, on average. In 2015, 488 per 100,000 males were incarcerated in comparison to 64 per 100,000 females. When further dividing these statistics by race, the difference between genders and races becomes more stark. While 457 per 100,000 white males were incarcerated, 2,613 (1,043) per 100,000 African-American (Hispanic) males were incarcerated. The rates for females were 52 per 100,000 white females in comparison to 103 (63) per 100,000 African-American (Hispanic) females. In 2012-2013, more females than males received bachelor's degrees across all races with larger disparities for African-American (65\% of the degrees conferred to females) and Hispanics (60\%).
+
+These differences seen as adults are the 
+
+We examine the early-life gender differences of a sample of subjects from disadvantaged families living in Chapel Hill, North Carolina in the 70s and 80s. These subjects were part of two nearly identical studies: the Carolina Abecedarian Project and the Carolina Approach to Responsive Education (ABC/CARE). Those in the treatment group received high-quality, intensive, early childhood education from shortly after birth until entrance into elementary school. Measures of cognitive, social-emotional, and parenting skills were collected on the children during and after the treatment. Figure~\ref{fig:intro-skills-plots} shows the differences between the males and females along these skills.
+
+\begin{sidewaysfigure}
+\begin{center}
+\caption{Mean Differences between Males and Females, Skills}
+\label{fig:intro-skills-plots}
+\begin{subfigure}[b]{0.49\textwidth}
+	\caption{IQ Measurements}
+	\label{fig:intro-skills-plots-cog}
+	\includegraphics[width=\textwidth]{../output/abccare-gdiff-cog}
+\end{subfigure}
+\begin{subfigure}[b]{0.49\textwidth}
+	\caption{Social-emotional Measurements}
+	\label{fig:intro-skills-plots-ncog}
+	\includegraphics[width=\textwidth]{../output/abccare-gdiff-ncog}
+\end{subfigure}
+
+\begin{subfigure}[b]{0.49\textwidth}
+	\caption{Achievement Measurements}
+	\label{fig:intro-skills-plots-ach}
+	\includegraphics[width=\textwidth]{../output/abccare-gdiff-ach}
+\end{subfigure}
+\begin{subfigure}[b]{0.49\textwidth}
+	\caption{Parenting Measurements}
+	\label{fig:intro-skills-plots-parenting}
+	\includegraphics[width=\textwidth]{../output/abccare-gdiff-parenting}
+\end{subfigure}
+\end{center}
+\raggedright \tiny
+Note: These plots show the means of factor variables by gender, pooling across experimental groups. All factor variables are calculated by principal factor analysis. The factors are then standardized and divided into 30 quantiles. The IQ factors include different measurements at the specified ages. The social-emotional factors are divided by early (0.5, 1, and 1.5 years) and school-age (6 and 8 years). The scales presented here are sociability and task orientation. The achievement factors are school-age math and reading factors (6, 7.5, 8, 8.5, 9, and 12 years) and an adult factor combining math and reading at 21 years. The parenting factors include factors of the subscales absence of punishment (discipline), environmental factors (environment), and maternal warmth and involvement (warmth). The other factors combine these scales measured when the subjects were toddlers (0.5, 1.5, and 2.5 years) and when they were older (3.5, 4.5, and 8 years).
+\end{sidewaysfigure}
 
 Many studies have shown the life-cycle benefits of early education for children from disadvantaged families.\footnote{\citet{Elango_Hojman_etal_2016_Early-Edu}.} Several of these studies separate analysis by gender and find that males and females benefit differently from early childhood education. For example, \citet{Heckman_Moon_etal_2010_QE} and \citet{Garcia_etal_2016_Comp_CBA_Unpublished}, both of which analyze randomized controlled trials with long-term data follow-ups, find that females tend to have more positive effects in education outcomes while males tend to have more positive effects in labor market and health outcomes. Other studies analyzing programs with shorter-term data also find gender differences in early skills and academic outcomes.\footnote{\citet{Deming_2009_AEJAE} and \citet{Ou_Reynolds_2010_Mechanisms_CYSR} are examples of this.} 
 
@@ -6,7 +42,3 @@ These gender results are variable across studies, however, obfuscating the concl
 
 Understanding the mechanisms of the treatment effects complements the above analyses by explaining and understanding the later-life gender differences seen in both approaches. We address the contradiction by focusing on how early childhood education affects the skill formation process of males and females differently, with these skills in turn affecting other outcomes.\footnote{There is also evidence that the development of males and females differs at this age such that they experience early childhood interventions differently. See \citet{Beeghly-etal_2017_IMHJ,Dayton_2017_IMHJ,Iruka_2017_IMHJ,Schore_2017_IMHJ} for recent findings on the topic of different development of males and females early in life. We consider these findings complementary to our own.}
 
-After describing the data in Section~\ref{sec:data}, we clarify the gender differences in Section~\ref{sec:gdiff}. In that section, we emphasize that gender differences do not strongly appear when aggregating the outcomes. Rather, they appear when considering the outcomes grouped by broad category, such as education or crime outcomes. 
-%We then set up a method for understanding the mechanisms through which these later-life gender differences form in Section~\ref{sec:methodology}. 
-Once establishing these general gender differences, we explore in depth the gender differences seen in measures of parenting quality in order to explain an important interaction between the inputs of education and the family environment (Section~\ref{sec:parenting}).
-We present the results of static mediation analyses that use early, school-age, and adult mediators in Section~\ref{sec:results}. Section~\ref{sec:conclusion} concludes.
