--- a/treatmenteffects/treatmenteffects.tex
+++ b/treatmenteffects/treatmenteffects.tex
@@ -9,13 +9,12 @@
 
 \begin{document}
 
-
 \title{Gender Differences in the Benefits of an Early Childhood Program}
 \author{Jorge Luis Garc\'{i}a \and James J. Heckman \and Anna L. Ziff}
 \date{Original date: December 7, 2016 \\ Current date: \today}
 \maketitle
 
-\input{sections/0_abstract}
+%\input{sections/0_abstract}
 \tableofcontents
 
 \doublespacing
