started implementing edits

--- a/treatmenteffects/sections/1_introduction.tex
+++ b/treatmenteffects/sections/1_introduction.tex
@@ -2,9 +2,9 @@ The wage gap is an oft-cited number that quantifies the difference between males
 
  Although this favors males, there are related measures of gender differences that favor females. In 2015, only 64 (103) per 100,000 (African American) females were incarcerated in comparison to 488 (2,613) per 100,000 (African American) males.\footnote{\citet{UDOJ_2016_PrisonersStatistics_Bulletin}.} Similarly, in 2012-2013, more females than males received bachelor's degrees across all races with large disparities for African Americans: 65\% of degrees conferred to African Americans were conferred to females.\footnote{\citet{UDOE_2016_Statistics_Report}.}
 
-These differences are select measurements from the life-cycle trajectory of skill formation and labor market opportunities. Based on previous literature of skill formation, these later skills build on earlier skill development.\footnote{\citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} Additionally, higher levels of these skills, especially social-emotional skills, can lead to more positive life-relevant outcomes like health.\footnote{\citet{Conti_etal_2016_LongTermHealth}.} The adult gender differences highlighted above can be the result of early-life differences that propagate over the life-cycle. We examine these differences by analyzing the effects of two nearly identical early childhood interventions. 
+These differences are select measurements from the life-cycle trajectory of skill formation and labor market opportunities. Based on previous literature of skill formation, these later skills build on earlier skill development.\footnote{\citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} Additionally, higher levels of these skills, especially social-emotional skills, can lead to more positive life-relevant outcomes like health.\footnote{\citet{Conti_etal_2016_LongTermHealth}.} The adult gender differences highlighted above can be the result of early-life differences that propagate over the life-cycle. Interventions throughout life can widen or close the gaps between males and females. We examine these differences by analyzing the effects of two nearly identical early childhood interventions. 
 
-The interventions, the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), were randomized controlled trials using a sample of disadvantaged families in Chapel Hill, North Carolina with children born between 1972 and 1980. The treatment group received high-quality, intensive, early childhood education from birth until age 5. Researchers collected measures of cognitive, social-emotional, and parenting skills on the subjects in both the treatment and control groups during and after the intervention. 
+The interventions, the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE), were randomized controlled trials using a sample of disadvantaged families in Chapel Hill, North Carolina with children born between 1972 and 1980. We combine the samples of the two interventions and denote this combined sample ABC/CARE. The children in the treatment group attended high-quality, intensive, early childhood education from birth until age 5. The families in the control group were not granted access to this center-based treatment, and instead either kept their children in informal care with relatives or enrolled them alternate center-based care. Researchers collected measures of cognitive, social-emotional, and parenting skills on the subjects in both the treatment and control groups during and after the intervention. Data follow-ups are available into adulthood, including administrative records on crime and biomarkers when the subjects were in their mid 30s.
 
 Using the ABC/CARE sample and pooling across experimental groups, Figure~\ref{fig:intro-skills-plots} shows the skill differences between the males and females. Overall, there are few significant gender differences. Consistent with previous work, the females in the sample tend to perform better than the males in social-emotional and achievement skill measurements.\footnote{\citet{Baker-Milligan_2013_Boy-Girl-Differences}.} While the parents of males exhibit more positive parenting skills during later ages (3.5, 4.5, and 8 years), the parents of females exhibit more warmth and involvement.
 
